--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name"><a href="index.html">Cole McCombs</a></li>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
-          <li><a href="about.html">About</a></li>
+          <li class="active"><a href="about.html">About</a></li>
         </ul>
     </div>
 
@@ -25,15 +25,9 @@
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
-        <p>I’m Web Designer/Developer with <a href="experience.html">8 years of industry experience</a>.</p>
-      </div> 
-
-      <div class="card">
-        <h2>Goals</h2>
-        <p>My goal is to continue learning solidifying existing knowledge as well as extending my current skillset.</p>
-      </div> 
-
+        <h2>About</h2>
+        <p>Outside of work I enjoy spending time with family and making electronic music under the alias <a href="https://soundcloud.com/onnen">ONNEN</a>.</p>
+      </div>
     </main>
     <footer>
       <ul>
