Further revisions and media query updates.

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <main class="flex">
       <div class="card">
         <h2>About</h2>
-        <p>Outside of work I enjoy spending time with family and making electronic music under the alias <a href="https://soundcloud.com/onnen">ONNEN</a>.</p>
+        <p>Outside of work I enjoy spending time with my family and making electronic music under the alias <a href="https://soundcloud.com/onnen">ONNEN</a>.</p>
       </div>
     </main>
     <footer>
