updated page content

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
         <p>My goal is to continue learning solidifying existing knowledge as well as extending my current skillset.</p>
       </div> 
 
+      <div class="card">
+          <h2>Skills</h2>
+          <p>Over the years I've been practicing the following skills:</p>
+          <ul>
+            <li>Front-End Development Languages (HTML, CSS, & JS)</li>
+            <li>Graphic Design</li>
+            <li>Professional Communication</li>
+            <li>and more!</li>
+          </ul>
+        </div> 
     </main>
     <footer>
       <ul>
