--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
-  <body>
+  <body class="home">
 
     <div class="main-nav">
         <ul class="nav">
@@ -24,17 +24,17 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <div class="card c-background">
         <h2>Background</h2>
         <p>I’m Web Designer/Developer with <a href="experience.html">8 years of industry experience</a>.</p>
       </div> 
 
-      <div class="card">
+      <div class="card c-goals">
         <h2>Goals</h2>
         <p>My goal is to continue learning solidifying existing knowledge as well as extending my current skillset.</p>
       </div> 
 
-      <div class="card">
+      <div class="card c-skills">
           <h2>Skills</h2>
           <p>Over the years I've been practicing the following skills:</p>
           <ul>
